[gd_scene load_steps=9 format=1]

[ext_resource path="res://Script/Character_info.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI_KIT/Box-1-Transparent.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI_KIT/Box-1-Opaque.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/Spells/frame-2-orange.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI_KIT/Box2-Transparent.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI_KIT/Add.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI_KIT/Add_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/font/Lady_radical.fnt" type="BitmapFont" id=8]

[node name="Character_info" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Texture" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="Texture"]

transform/pos = Vector2( 158.08, 192 )
transform/scale = Vector2( 3.84, 4.3494 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="Texture"]

transform/pos = Vector2( 158.293, 188.707 )
transform/scale = Vector2( 3.41333, 2.26114 )
texture = ExtResource( 3 )
modulate = Color( 0.894531, 0.887543, 0.887543, 1 )

[node name="Sprite3" type="Sprite" parent="Texture"]

transform/pos = Vector2( 160, 192 )
transform/scale = Vector2( 0.875, 1.08946 )
texture = ExtResource( 4 )
modulate = Color( 0.992188, 0.984436, 0.984436, 1 )

[node name="Sprite2" type="Sprite" parent="Texture"]

transform/pos = Vector2( 160, 288 )
transform/scale = Vector2( 1.86828, 0.928922 )
texture = ExtResource( 5 )
modulate = Color( 0.00390625, 0.00390625, 0.00390625, 1 )

[node name="Button" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="Button"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 140.0
margin/right = 724.0
margin/bottom = 644.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton1" type="TextureButton" parent="Button"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 182.0
margin/right = 724.0
margin/bottom = 686.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="Button"]

rect/scale = Vector2( 0.05, 0.05 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 222.0
margin/right = 724.0
margin/bottom = 726.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Value_info" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label_str" type="Label" parent="Value_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 184.0
margin/top = 140.0
margin/right = 224.0
margin/bottom = 161.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_agi" type="Label" parent="Value_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 183.0
margin/top = 182.0
margin/right = 223.0
margin/bottom = 203.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_intel" type="Label" parent="Value_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 184.0
margin/top = 222.0
margin/right = 224.0
margin/bottom = 243.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_point" type="Label" parent="Value_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 184.0
margin/top = 280.0
margin/right = 224.0
margin/bottom = 301.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name_info" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label_str_inf" type="Label" parent="Name_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 140.0
margin/right = 176.0
margin/bottom = 161.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Strenght           :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_agi_inf" type="Label" parent="Name_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 182.0
margin/right = 175.0
margin/bottom = 203.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Agility               :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_intel_inf" type="Label" parent="Name_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 222.0
margin/right = 175.0
margin/bottom = 243.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Intelligent       :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_Leftover_inf" type="Label" parent="Name_info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 279.0
margin/right = 175.0
margin/bottom = 300.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Point(s) Left:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_char_inf" type="Label" parent="Name_info"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 65.0
margin/top = 75.0
margin/right = 160.0
margin/bottom = 96.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Name's Status"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Exit" type="TextureButton" parent="."]

rect/rotation = 46.5196
rect/scale = Vector2( 0.06, 0.06 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 66.0
margin/right = 740.0
margin/bottom = 570.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.976563, 0.0419617, 0.0419617, 1 )

[connection signal="pressed" from="Button/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Button/TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="Button/TextureButton2" to="." method="_on_TextureButton2_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


